log
Fri 05 May 2023 10:27:01 PM UTC: 
 tests:  0|5
total_score: 0/70
9aa702c
Fri 05 May 2023 11:15:09 PM UTC: 
 sudoku.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  0|5
total_score: 0/70
9be659e
Fri 05 May 2023 11:59:15 PM UTC: 
 sudoku.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
ea29c50
Sat 06 May 2023 12:12:31 AM UTC: 
 sudoku.c | 34 ++++++----------------------------
 1 file changed, 6 insertions(+), 28 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:32: error: expected ‘;’ before ‘}’ token
   58 |           n->sudo[i][j] = nuevo
      |                                ^
      |                                ;
   59 |         }
      |         ~                       
sudoku.c:60:26: error: expected ‘;’ before ‘return’
   60 |         n->sudo[i][j] = 0
      |                          ^
      |                          ;
   61 |         return list;
      |         ~~~~~~            
Compilation failed
86e0a0d
Sat 06 May 2023 12:12:39 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a5ddd12
Sat 06 May 2023 12:48:09 AM UTC: 
 sudoku.c | 48 ++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 48 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘repetidosFila’:
sudoku.c:52:44: error: statement with no effect [-Werror=unused-value]
   52 |       else numFila[n->sudo[fila][columna]] == 1;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c: In function ‘repetidosColumna’:
sudoku.c:63:47: error: statement with no effect [-Werror=unused-value]
   63 |       else numColumna[n->sudo[fila][columna]] == 1;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
1acec76
Sat 06 May 2023 12:49:46 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
11a722e
Sat 06 May 2023 12:51:28 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
3bc989a
Sun 07 May 2023 03:13:39 AM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:6: error: value computed is not used [-Werror=unused-value]
  133 |     (*cont++);
      |     ~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
246517c
Sun 07 May 2023 03:13:55 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
36e98f3
